<resources>
    <string name="app_name">PositioningSample</string>
    <string name="mode">Mode :</string>
    <string name="algorithm">Algorithm :</string>
    <string name="is_indoor">Is indoor:</string>
    <string name="true_txt">true</string>
    <string name="false_txt">false</string>
    <string name="start">Start position</string>
    <string name="pause">Pause position</string>
    <string name="resume">Resume position</string>
    <string name="stop">Stop position</string>
    <string name="change_floor">Change Floor</string>
    <string name="change_mode">Change mode</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>

    <string-array name="location_mode">
        <item>Normal</item>
        <item>Normalwithwifithrottlingdisabled</item>
        <item>Game</item>
    </string-array>

    <string name="title_activity_base">BaseActivity</string>

    <string name="permission_tips">Please grant the necessary permissions</string>
    <string name="help">Help</string>
    <string name="lacks_permission">The current application is missing the necessary permissions. \n\nPlease click \"Settings\"\ "Permissions\"- to open the required permissions. \n\nFinally, click the Back button twice to return.</string>
    <string name="quit">Quit</string>
    <string name="setting">Setting</string>
    <string name="floors">Floors</string>
    <string name="note">Note</string>
    <string name="start_position_first">Please start positioning first.</string>

    <string name="notification_title">Positioning Background Location</string>
    <string name="notification_text">Running in the background</string>

    <string name="get_current_location">Getting current location...</string>
    <string name="please_wait">Please wait</string>

    <string name="update_dialog_title">update tip</string>
    <string name="cancel">Cancel</string>
</resources>
